discussion/kv_engine/137969/137969_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-16181: Change VB::Manifest stats to use fmt::memory_buffer

Switch from snprintf to fmtlib API

Change-Id: Ifbaa4648bb6aebc5d0adc2178824785726eab986

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-10-12 15:39:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-12 16:17:30.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5028/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1119:26: error: use of undeclared identifier "highSeqno" [clang-diagnostic-error]
    addStat("highSeqno", highSeqno);
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5028/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1119:26:
error: use of undeclared identifier "highSeqno" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5028/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26826/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1119:26:
error: use of undeclared identifier "highSeqno"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26826/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31081/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\collections\vbucket_manifest.cc(1119): error C2065: "highSeqno": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31081/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6603/ : FAILURE

Compile error at [2020-10-12T16:15:12.820Z] ../kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1119:26:
error: use of undeclared identifier "highSeqno"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6603/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14244/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5413/ : FAILURE

Compile error at [2020-10-12T15:53:47.675Z] ../kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1119:26:
error: use of undeclared identifier "highSeqno"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5413/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6339/ : FAILURE

Compile error at [2020-10-12T16:13:04.365Z] ../kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1119:26:
error: ?highSeqno? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6339/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6458/ : FAILURE

Compile error at [2020-10-12T16:14:06.096Z] ../kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1119:26:
error: ?highSeqno? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6458/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3556/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
